--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.8",
     "dayjs": "^1.11.19",
     "exact": "^1.0.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
@@ -24,7 +25,8 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.9.6",
     "react-toastify": "^11.0.5",
-    "sass": "^1.94.2"
+    "sass": "^1.94.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
