--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
     "dayjs": "^1.11.19",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.6",
     "exact": "^1.0.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.23.24",
